[package]
name = "srt-rs"
version = "0.2.3"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Idiomatic rust binding to libsrt"
repository = "https://github.com/nthieu173/srt-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "1.4.13" }
libc = "0.2"
futures = "0.3"
os_socketaddr = "0.1.1"


[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "inaddr", "in6addr"] }
