[package]
name = "libsrt-sys"
version = "1.4.1"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Bindings for libsrt"
links = "srt"
build = "build.rs"
repository = "https://github.com/nthieu173/srt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["ws2def"] }