[package]
name = "libsrt-sys"
version = "1.4.2"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Bindings for libsrt"
links = "srt"
build = "build.rs"
repository = "https://github.com/nthieu173/srt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
